Shape Of An Array

--- a/shape_of_an_array.ipynb
+++ b/shape_of_an_array.ipynb
@@ -2,24 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5a967ce5-534b-4a8d-808a-758e91941aeb",
+   "id": "8bda1aab-0b17-419e-a0ac-5c04c7ea7de0",
    "metadata": {},
    "source": [
-    "# Numpy"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d351309e-f103-400e-b1c6-8e7311333d3b",
-   "metadata": {},
-   "source": [
-    "## Two Dimensional Arrays"
+    "# Shape Of An Array"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "d3c29a1c-98d5-44eb-9229-8312b4ea165e",
+   "execution_count": 15,
+   "id": "e7ee7a62-b743-4a2e-bd8c-89cb27293380",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,18 +20,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "8a98aa1d-8d8b-43f3-988b-071fcdfcc717",
+   "execution_count": 16,
+   "id": "6437938d-ed61-47ee-9f29-97953532d78e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "arr1 = np.array([[1,2,3],[4,5,6],[7,8,9],[10,11,12]])"
+    "arr1 = np.array([1,2,3,4])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "4d5c33a3-3168-4e2a-aaf3-9f9259644502",
+   "execution_count": 17,
+   "id": "40734857-f729-4769-ad6e-79339c3c6849",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(arr1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "9b6fba3f-6889-49ae-94ba-cbdc3370ac78",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4,)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.shape(arr1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "6722484e-0d74-4302-b636-8a5fadc6276c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4,)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr1.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "3eff1456-f798-46a9-8e1c-7696ae9d0d54",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr2 = np.array([[1,2,3],[4,5,6],[7,8,9],[10,11,12]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "c1082a22-4d56-428b-a5a6-3041c12e0d5b",
    "metadata": {},
    "outputs": [
     {
@@ -54,105 +116,69 @@
     }
    ],
    "source": [
-    "print(arr1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "0408f77d-5cfb-4d5a-81cc-90b4b7459b11",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "arr1.ndim"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "832bdb21-9197-47d1-a375-c33bb0adc272",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "arr2 = np.array([[10,20,30],[40,50,60]])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "dea16379-3016-4c5f-90ce-2cf0ebe8fee9",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[10 20 30]\n",
-      " [40 50 60]]\n"
-     ]
-    }
-   ],
-   "source": [
     "print(arr2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "9a0012f2-6292-43e8-87ea-26d8a7bceebd",
+   "execution_count": 22,
+   "id": "fc2a0374-8f4f-4ba7-9ed8-e2475bb9d078",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "6"
+       "(4, 3)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "arr2.size"
+    "arr2.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "8d0c227e-ab1e-400d-aaf3-437c2991406e",
+   "execution_count": 23,
+   "id": "b69e9b50-b3bd-43ce-ba1e-6517813a3787",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr3 = np.array([\n",
+    "    [[1,2,3],[4,5,6],[7,8,9],[10,11,12]],\n",
+    "    [[1,2,3],[4,5,6],[7,8,9],[10,11,12]],\n",
+    "    [[1,2,3],[4,5,6],[7,8,9],[10,11,12]]\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "fe00dc46-8a98-4c9c-bdf6-5d06f8e338bb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "12"
+       "(4,)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "arr1.size"
+    "arr1.shape"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b7f9b091-e4f8-4a73-9f50-759ff950b353",
+   "id": "ca40a4f6-8ef9-4d60-a9fd-e7a418f9061f",
    "metadata": {},
    "outputs": [],
    "source": []
